# nano-llama-3

./: .gitignore  README.md  custom_structure.json  generate.py  llama.py  main.py  official_structure.json  pyproject.toml  requirements.txt  transformer.py  util.py
