[project]
name = "nano-llama-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "numpy>=2.3.5",
    "packaging>=25.0",
    "safetensors>=0.7.0",
    "tiktoken>=0.12.0",
    "tokenizer>=3.5.5",
    "torch>=2.9.1",
    "torchview>=0.2.7",
    "transformers>=4.57.3",
]
